2006-09-15  Rodrigo Moya <rodrigo@novell.com>

	Fixes #356074

	* gnome-keyboard-properties-xkb.c (set_model_text): make sure 'model'
	is never NULL. Original patch from Brian Cameron <brian.cameron@sun.com>.

2006-08-07  Rodrigo Moya <rodrigo@novell.com>

	Fixes #348847

	* keyboard.desktop.in.in: fixed GNOME Bugzilla strings.

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* keyboard.desktop.in.in:
	don't list the Application category, list the HardwareSettings one,
	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #344321)
	
2006-07-08  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties.glade: making model choser button more
	verbose. Closing #335833

2006-07-06  Sergey Udaltsov <svu@gnome.org>

	Fixing the build process

2006-06-25  Sergey Udaltsov <svu@gnome.org>

	*.c: massive libgswitchit API change
	(following standard GNOME naming conventions)

2006-04-22  Sergey Udaltsov <svu@gnome.org>

	gnome-keyboard-properties-xkblt.c:
	Layout Preview window saves/restores geometry

2006-03-02  Sergey Udaltsov <svu@gnome.org>

	Fixes #336396

	* gnome-keyboard-properties-xkblt.c: fixed the buttons sensitivity
	change.
	
2006-01-26  Rodrigo Moya <rodrigownovell.com>

	Fixes #328748

	* gnome-keyboard-properties.c (blink_to_widget): remove space
	before punctuation.

2006-01-22  Rodrigo Moya <rodrigo@novell.com>

	Fixes #168790

	* gnome-keyboard-properties.c (accessibility_button_clicked): dont
	use "capplet" in user-visible strings.

2006-01-09  Sergey Udaltsov <svu@gnome.org>

	Fixes bug #326275
	* gnome-keyboard-properties.glade: fixing the window title 
	capitalization

2006-01-08  Sergey Udaltsov <svu@gnome.org>

	Fixes bug #326137
	* gnome-keyboard-properties.glade: making the window a bit larger

2006-01-03  Jaap A. Haitsma <jaap@haitsma.org>

	Fixes bug #321549

	* gnome-keyboard-properties.c (create_dialog): don't leak
	GtkSizeGroup's.

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>
